--- a/cucumber_default_content.info.yml
+++ b/cucumber_default_content.info.yml
@@ -5,3 +5,7 @@ package: webship
 core_version_requirement: ~10
 dependencies:
   - default_content:default_content
+
+default_content:
+menu_link_content:
+- d7023d50-d6d1-4e4e-96c9-06719a930e6d
