Issue #3410372: Update Drupal Core from ~10.1.0 to ~10.2.0 for Cucumber Default Content and add Web Patches for PHP 8.3 local patching recipes

--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
   "name": "drupal/cucumber_default_content",
-  "description": "Provides default content for Cucumber site.",
+  "description": "Provides default content for the Cucumber Automated Functional Acceptance Testing Management system.",
   "type": "drupal-module",
   "license": "GPL-1.0-or-later",
   "minimum-stability": "dev",
   "authors": [
     {
-      "name": "Webship",
-      "homepage": "http://webship.org",
+      "name": "Webship.co",
+      "homepage": "http://webship.co",
       "role": "Maintainer"
     }
   ],
@@ -22,7 +22,8 @@
     }
   },
   "require": {
-    "drupal/core": "~10.0",
-    "drupal/webdev": "10.0.x-dev"
+    "drupal/core": "~10.2.0",
+    "drupal/webpatches": "~10.0",
+    "drupal/webdev": "~10.0"
   }
 }
